Bump async.java to PR #9 (CounterLimit race fix) and uncap akka benchmark
async-java/async.java#9 fixes a CounterLimit lost-update data race that
hung Asyncc.Parallel under sustained rapid-fire concurrent load. The bug
pre-existed PR #8 but only surfaced reliably once virtual-thread
executors started amplifying concurrency. Root cause and fix:

  CounterLimit.{started,finished} were plain Integer fields mutated with
  non-atomic this.started++ / this.finished++ from per-task callbacks.
  Each AsyncTaskRunner holds its OWN cbLock so two parallel-task
  callbacks could both enter their own cbLocks simultaneously and both
  call p.c.incrementFinished() against the shared CounterLimit. One
  increment gets lost; ParallelRunner.isDone() returns false forever;
  final Asyncc.Parallel callback never fires; caller times out.

  Fixed by switching the two fields to AtomicInteger. Two-line change.

What this commit changes downstream

* remote/akka-ws-server/pom.xml — async-java.version bumped from
  937c0e3 (post-#8, has the race) to dd55f5a (head of PR #9
  fix/vt-pinning-investigation branch). After #9 merges to master, bump
  to the merge SHA.
* remote/spark-pipeline-server/pom.xml — same bump.
* remote/akka-ws-server/src/test/.../BenchmarkComparisonTest.java —
  iteration count uncapped from 30 to 200 now that the race is fixed.
* remote/akka-ws-server/k8s/.../deployment.yaml — BENCHMARK_ITERATIONS
  env var raised from 30 to 200 on the live deployment.
* remote/akka-ws-server/readme.md — replaced the misdiagnosed
  "JDK 21 synchronized-pinning" section with the actual root-cause
  writeup (data race in CounterLimit, virtual threads were just the
  amplifier, not the cause). Headline benchmark numbers updated from
  the 30-iteration cap to a statistically meaningful 200-iter run.

Verified

* akka-ws-server: 10/10 tests pass with iterations=200 (was failing at
  iter ~32 pre-fix)
* Headline benchmark (200 iter, JDK 21, VT executor):
    p50:    4460 vs 5826 us  (async.ja